add rainbow btn

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <div class="header">
     <h1>Etch a sketch</h1>
     <div class="buttons">
-    <button id="gridBtn">Number of Squares</button>
+    <button id="inputBtn">Number of Squares</button>
     <button id="resetBtn">Reset</button>
+    <button id="rainbowBtn">Rainbow</button>
     </div>
     </div>
     <div id="grid-container"></div>
