--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
     <title>Etch a sketch</title>
 </head>
 <body>
+    <div class="content">
     <div class="header">
     <h1>Etch a sketch</h1>
     <div class="buttons">
-    <button id="inputBtn">Number of Squares</button>
-    <button id="resetBtn">Reset</button>
-    <button id="rainbowBtn">Rainbow</button>
+    <button id="inputBtn" class="button">Number of Squares</button>
+    <button id="resetBtn" class="button">Reset</button>
+    <button id="blackBtn" class="button">Black</button>
+    <button id="rainbowBtn" class="button">Rainbow</button>
     </div>
     </div>
     <div id="grid-container"></div>
-   
+    </div>  
     <script src="/script.js"></script>
 </body>
 </html>
