--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="/script.js" defer></script>
     <title>Etch a sketch</title>
 </head>
 <body>
@@ -20,6 +21,5 @@
     </div>
     <div id="grid-container"></div>
     </div>  
-    <script src="/script.js"></script>
 </body>
 </html>
